--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ RoxygenNote: 7.3.1
 Depends: R (>= 3.5.0)
 Imports: 
     Rcpp,
+    RcppEigen,
+    Matrix,
     ggplot2
 Suggests:
     latex2exp,
@@ -20,5 +22,7 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0)
 LinkingTo: 
-    Rcpp
+    Rcpp,
+    RcppEigen,
+    Matrix
 Config/testthat/edition: 3
