--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,8 @@
 
 export(backward_solver)
 export(binsensate)
-export(two_stage_em)
+export(em_solver)
 importFrom(Rcpp,sourceCpp)
-importFrom(ggplot2,aes)
-importFrom(ggplot2,facet_grid)
-importFrom(ggplot2,geom_col)
-importFrom(ggplot2,ggplot)
-importFrom(ggplot2,theme_bw)
-importFrom(ggplot2,xlab)
-importFrom(ggplot2,ylab)
 importFrom(stats,glm)
 importFrom(stats,pbinom)
 importFrom(stats,runif)
