--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,12 @@
 export(backward_solver)
 export(binsensate)
 export(em_solver)
+export(em_solver_cts)
 importFrom(Rcpp,sourceCpp)
+importFrom(parallel,mclapply)
 importFrom(stats,glm)
 importFrom(stats,pbinom)
+importFrom(stats,rbinom)
 importFrom(stats,runif)
 importFrom(utils,combn)
 importFrom(utils,tail)
