--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,21 @@
 Package: binsensate
 Title: Binary Sensitivity Analysis for Missing Data
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person("Anonymous", "Author", , "anonymous@anonymous.com", role = c("aut", "cre"))
-Description: Missing data is a common issue in many statistical applications, especially when the missingness pattern is informative. In this package, we deal with the setting of missing binary data and estimation of average treatment effects (ATE) under imperfectly observed confounding. In particular, we assume that binary confounders may be underreported, with the data containing a biased proxy of the true confounder values. In a sensitivity-type analysis we answer the question: which rate of (informative) missingness would be needed to change the sign of causal effect estimate? The interpretable sensitivity parameter is the data fidelity -- the probability that a confounder is recorded correctly.
+Description: Measurement error is a common issue in many statistical applications, especially when the error pattern is informative. This package deals with the setting of imperfectly observed binary data and the estimation of average treatment effects (ATE) under imperfectly observed confounding. In particular, we assume that binary confounders may be underreported, with the data containing a biased proxy of the true confounder values. In a sensitivity-type analysis we answer the question: which rate of (informative) measurement error would be needed to change the sign of causal effect estimate? The interpretable sensitivity parameter is the data fidelity -- the probability that a confounder is recorded correctly.
 License: GPL-3
 Encoding: UTF-8
 VignetteBuilder: rmarkdown
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Depends: R (>= 3.5.0)
 Imports: 
-    Rcpp,
-    RcppEigen,
-    Matrix,
-    ggplot2
+    Rcpp
 Suggests:
     latex2exp,
     assertthat,
+    Matrix,
     knitr,
     rmarkdown,
     testthat (>= 3.0.0)
